--- a/static/css/atividades.css
+++ b/static/css/atividades.css
@@ -34,13 +34,13 @@
 
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 6px;
 
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06);
 }
 
-/* PREVIEW MENOR */
-.preview {
+/* PREVIEW  */
+.atividade-preview {
   width: 100%;
   height: 110px;
   border-radius: 6px;
@@ -48,14 +48,13 @@
   background-color: #f3f4f6;
 }
 
-.preview img {
+.atividade-preview img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-/* preview vazio */
-.preview-vazio {
+.atividade-preview-vazio {
   height: 100%;
   display: flex;
   align-items: center;
@@ -64,22 +63,45 @@
   color: var(--texto-secundario);
 }
 
-/* TEXTO */
-.info h3 {
+/* INFO */
+.atividade-card h3 {
   font-size: 0.95rem;
   margin-bottom: 8px;
 }
 
-.info p {
+.atividade-card p {
   font-size: 0.8rem;
   color: var(--texto-secundario);
   margin-bottom: 0;
 }
 
-.info .materia {
+.atividade-info {
+  display: flex;
+  flex-direction: column;
+  gap: 2px; 
+}
+
+.atividade-info h3 {
+  margin: 0 0 4px 0;
+}
+
+.atividade-info p {
+  margin: 0;
+  line-height: 1.2;
+}
+
+.atividade-card .info-materia {
   font-size: 0.75rem;
 }
 
+
+/* ACOES */
+.atividade-actions{
+  display: flex;
+  flex-direction: row;
+  text-align: right;
+  justify-content: right;
+}
 
 @media (max-width: 900px) {
   .atividade-lista {
@@ -87,7 +109,7 @@
     gap: 10px;
   }
 
-  .preview {
+  .atividade-preview {
     height: 90px;
   }
 
@@ -95,7 +117,7 @@
     padding: 8px;
   }
 
-  .info h3 {
+  .atividade-card h3 {
     font-size: 0.85rem;
   }
 }
