--- a/static/css/home.css
+++ b/static/css/home.css
@@ -28,38 +28,67 @@
   gap: 16px;
 }
 
+/* ===============================
+   SEARCH BAR
+================================ */
+
 .search-wrapper {
   position: relative;
   flex: 1;
 
   height: 46px;
+  padding: 0 0px 0 20px;
+
   background-color: #fff;
   border: 1px solid #e5e7eb;
   border-radius: 999px;
 
   display: flex;
   align-items: center;
-  padding-left: 20px;
+
+  box-sizing: border-box;
+}
+
+form.search-wrapper {
+  display: flex !important;
+  flex-direction: row !important;
+  gap: 0 !important;
+  background: transparent;
 }
 
 .search-wrapper input {
+  all: unset;
   flex: 1;
-  height: 100%;
-  border: none;
-  outline: none;
-  background: transparent;
 
+  height: 100%;
   font-size: 1rem;
   color: #374151;
 }
 
+.search-wrapper input::placeholder {
+  color: #9ca3af;
+}
+
+.search-wrapper input:focus {
+  outline: none;
+  box-shadow: none;
+  background-color: transparent !important;
+}
+
+.search-wrapper:focus-within {
+  box-shadow: none;
+  border-color: #e5e7eb;
+  background-color: transparent !important;
+}
+
 .search-btn {
+  all: unset;
+
   width: 38px;
   height: 38px;
-  margin-right: 6px;
 
+  margin-right: 3px;
   border-radius: 50%;
-  border: none;
 
   background-color: var(--azul-principal);
   cursor: pointer;
